tests/ui/borrowck/issue-69789-iterator-mut-suggestion.stderr
error[E0594]: cannot assign to `*item`, which is behind a `&` reference
  --> $DIR/issue-69789-iterator-mut-suggestion.rs:7:9
   |
LL |     for item in &mut std::iter::empty::<&'static ()>() {
   |                 -------------------------------------- this iterator yields `&` references
LL |
LL |         *item = ();
   |         ^^^^^^^^^^ `item` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
